Closed Bug 796418 Opened 13 years ago Closed 13 years ago

[Azure] Cairo check matrix consistency before drawing

Categories

(Core :: Graphics, defect)

x86_64
Linux
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla19

People

(Reporter: ajones, Assigned: ajones)

References

Details

Attachments

(1 file, 1 obsolete file)

Add an assertion to ensure the cairo context matrix matches the DrawTargetCairo transform.
Assignee: nobody → ajones
Status: NEW → ASSIGNED
Depends on: 795135
Try run for 56c4d452ac26 is complete. Detailed breakdown of the results available here: https://tbpl.mozilla.org/?tree=Try&rev=56c4d452ac26 Results (out of 38 total builds): success: 34 warnings: 4 Builds (or logs if builds failed) available at: http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/ajones@mozilla.com-56c4d452ac26
Cool! Maybe ifdef DEBUG GetTransform()? Unless we want people to use it, which I don't think we do.
Try run for c36eab1f1b5d is complete. Detailed breakdown of the results available here: https://tbpl.mozilla.org/?tree=Try&rev=c36eab1f1b5d Results (out of 74 total builds): success: 72 warnings: 2 Builds (or logs if builds failed) available at: http://ftp.mozilla.org/pub/mozilla.org/firefox/try-builds/ajones@mozilla.com-c36eab1f1b5d
Attachment #674032 - Flags: review?(joe) → review+
Status: ASSIGNED → RESOLVED
Closed: 13 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla19
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: