Bug 796418 - Check cairo matrix before drawing. r=joe